syntax = "proto3";

option java_package = "com.lpc";
option java_outer_classname = "AuthorityGRPC";

import "com/lpc/public.proto";

//权限管理
message RoleMessage{
  int64 id = 1;
  string name = 2;
  string info = 3;
}

message RoleUserMessage{
  int64 id=1;
  int64 roleId=2;
  string userId=3;
  string info=4;
}

message MenuMessage{
  int64 id=1;
  string name=2;
  int64 parent=3;
  int32 level=4;
  string url=5;
  string menu_code=6;
  string iconUrl=7;
}

message RoleMenuMessage{
  int64 id = 1;
  int64 roleId = 2;
  int64 menuId = 3;
  string info=4;
}

/**
权限管理
 */
service AuthorityService{
  /**
  获取角色信息
   */
  rpc getRole(Id) returns (RoleMessage);

  /**
  获取用户角色分配项
   */
  rpc getRoleUser (Id) returns (RoleUserMessage);

  /**
  获取角色分配的菜单项
   */
  rpc getRoleMenu(Id) returns (stream RoleMenuMessage);

  /**
  获取用户的菜单列表
   */
  rpc getMenu(stream Id) returns (stream MenuMessage);

  /**
  获取用户被授权的菜单项
   */
  rpc getUserMenu(Id) returns (stream MenuMessage);
}

