syntax = "proto3";

option java_package="com.lpc";
option java_outer_classname = "DictGrpc";

import "com/lpc/public.proto";
import public "google/protobuf/timestamp.proto";

message DictMessage{
  int64 id=1;
  DictTableAndColumnMessage tableAndColumn = 2;
  string typeCode=3;
  string typeName=4;
  int32 valueId=5;
  string valueName=6;
  int32 status=7;
  google.protobuf.Timestamp updateTime=8;
}

message DictTableAndColumnMessage{
  string tableName = 1;
  string columnName = 2;
}

service DictService{
  rpc getDict(Id) returns (DictMessage);
  rpc addDict(DictMessage) returns (ResultBool);
  rpc updateDict(DictMessage) returns (ResultBool);
  rpc deleteDict(Id) returns (ResultBool);
  rpc getDictsByTableAndColumn(DictTableAndColumnMessage) returns (stream DictMessage);
}